--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
 }
 
 /*header section*/
-.header {
+#header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -91,14 +91,17 @@ body {
   left: 0;
 }
 
-.header .navbar {
+#navbar {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
 }
-
-.header .navbar a {
+#navbar li{
+  list-style-type: none;
+  padding: 0 20px;
+  position: relative;
+}
+#navbar li a {
   text-decoration: none;
   color: #1e1e1e;
   font-weight: 600;
@@ -107,20 +110,27 @@ body {
   position: relative;
 }
 
-.header .navbar a:hover,
-.header .navbar a.active {
+#navbar li a:hover,
+#navbar li a.active {
   color: #088178;
 }
 
-.header .navbar a.active::after,
-.header .navbar a:hover::after {
+#navbar li a.active::after,
+#navbar li a:hover::after {
   content: "";
-  width: 50%;
+  width: 30%;
   height: 2px;
   background-color: #088178;
   position: absolute;
-  bottom: .4px;
-  left: 0;
+  bottom: -4px;
+  left: 0px;
+}
+#mobile{
+  display: none;
+  align-items: center;
+}
+#close{
+  display: none;
 }
 
 /* Home page */
@@ -238,7 +248,7 @@ body {
   min-width: 250px;
   cursor: pointer;
 
-  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
   margin: 15px 0;
   transition: 0.2s ease;
   position: relative;
@@ -841,7 +851,7 @@ body {
 }
 
 /* Cart Page */
-cart {
+#cart {
   overflow-x: auto;
 }
 
@@ -954,3 +964,224 @@ cart {
   border: 1px solid #e2e9e1;
   font-size: 13px;
 }
+
+
+/* Start Media Query */
+@media (max-width:799px){
+  .section-p1{
+    padding: 40px 40px;
+  }
+  #navbar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #E3E6F3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+  #navbar.active{
+    right: 0px;
+  }
+  #navbar li {
+    margin-bottom: 25px;
+  }
+  #mobile{
+    display: flex;
+    align-items: center;
+  }
+  #mobile i{
+    color: #1e1e1e;
+    font-size: 24px;
+    padding-left: 20px;
+  }
+  #close{
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+  #lg-bag{
+    display: none;
+  }
+  .hero{
+    height: 70vh;
+    padding: 0 80px;
+    background-position: top 30% right 30%;
+  }
+  #feature{
+    justify-content: center;
+  }
+  #feature .box{
+    margin: 15px 15px;
+  }
+  #product1 .pro-container{
+  justify-content: center;
+  }
+  #product1 .pro-container .box-product {
+    margin: 15px 15px;
+    }
+    #banner{
+      height: 20vh;
+    }
+    #sm-banner .banner-box {
+     
+      min-width: 100%;
+      height: 30vh;
+    }
+    #banner3 {
+
+      padding: 0 40px;
+    }
+    #banner3 .banner-box {
+     width: 28%;
+    }
+    #newsletter .form {
+      width: 70%;
+    }
+
+    /* Contact Page */
+    #form-details {
+      padding: 40px;
+    }
+    #form-details form {
+      width: 50%;
+    }
+
+ }
+ @media (max-width:477px) {
+  .section-p1 {
+    padding: 20px ;
+  }
+  #header{
+    padding: 10px 30px;
+  }
+  h1{
+    font-size: 38px;
+  }
+  h2{
+    font-size: 32px;
+  }
+  .hero{
+    padding: 0 20px;
+    background-position: 55%;
+  }
+  #feature{
+    justify-content: space-between;
+  }
+  #feature .box{
+    width: 155px;
+    margin: 0 0 15px 0;
+  }
+  #product1 .pro-container .box-product {
+    width: 100%;
+  }
+  #banner {
+    height: 40vh;
+  }
+  #sm-banner .banner-box {
+    height: 40vh;
+  }
+  #sm-banner .banner-box:nth-child(2) {
+   margin-top: 20px;
+  }
+  #banner3 {
+    padding: 0 20px;
+  }
+  #banner3 .banner-box {
+   width: 100%;
+  }
+  #newsletter {
+    padding: 40px 20px;
+  }
+  #newsletter .form {
+    width: 100%;
+  }
+
+  /*Single Product*/
+  #prodetails {
+    display: flex;
+   flex-direction: column;
+  }
+  #prodetails .single-pro-image {
+    width: 100%;
+    margin-right: 0px;
+  }
+  #prodetails .single-pro-details {
+    width: 100%;
+  }
+
+  /* Blog Page*/
+  #blog{
+    padding: 100px 20px 0 20px;
+  }
+  #blog .blog-box{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #blog .blog-box .blog-img {
+    width: 100%;
+    margin-right: 0px;
+    margin-bottom: 30px;
+  }
+  #blog .blog-details {
+    width: 100%;
+  }
+
+  /* About Page */
+  #about-head {
+    flex-direction: column;
+  }
+  #about-head img {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  #about-head div {
+    padding-left: 0px;
+  }
+  #about-app .video  {
+    width: 100%;
+  }
+
+  /* Contact Page*/
+  #contact-details {
+    flex-direction: column;
+  }
+  #contact-details .details {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  #contact-details .map {
+    width: 100%;
+  }
+  #form-details {
+    margin: 10px;
+    padding: 30px 10px;
+   flex-wrap: wrap;
+  }
+  #form-details form {
+    width: 100%;
+   margin-bottom: 30px;
+  }
+
+  /* Cart Page */
+  #cart-add {
+    flex-direction: column;
+  }
+  #coupon {
+    width: 100%;
+  }
+  #subtotal {
+    width: 100%;
+    padding: 20px;
+  }
+ }
